--- a/templates/recording.html
+++ b/templates/recording.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <form  action="/output/next_page/text_to_voice" method="post" enctype="multipart/form-data">
+        <button type="submit" class="btn btn-success">play</button>
+    
+      </form>
     <audio controls>
-        <source src="horse.mp3" type="audio/mpeg">
+        <source src="solution.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
 </body>
