--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 
 	{% if prediction %}
 	<h2> <b><i> {{prediction}} </i></b></h2>
-  <form  action="/recording" method="post" enctype="multipart/form-data">
+  <form  action="/output/next_page" method="post" enctype="multipart/form-data">
     <button type="submit" class="btn btn-success">listen_solution</button>
 
   </form>
