--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,12 +5,14 @@ html{
     height: 62.5%;
     font-size: 62.5%;
 }
-body{
+    body{
     background: rgb(247,255,236);
 }
 
 header{
     width: 100%;
+    position: fixed;
+    top: 0;
 }
 header>*{
     float: left;
@@ -19,19 +21,23 @@ header>nav{
     width: 73%;
 }
 header>nav>a{
-    width: 23.33%;
+    width: 15%;
     float: left;
     font-size: 2rem;
     text-align: center;
     text-decoration: none;
-    color: grey;
+    color: white;
     padding: 0.5rem;
+    margin-left: 7%;
+    background:rgb(32, 95, 32);
+    border-radius: 0.3rem;
+ 
 }
 header>section{
     width: 20%;
 }
 .donate{
-    color: grey;
+    color: white;
     width: 25%;
     height:2rem;
     font-size: 2rem;
@@ -42,7 +48,7 @@ header>section{
 }
 section>p{
     font-size: 1.5rem;
-    color: grey;
+    color: white;
 }
 header>*{
     margin-top:2rem;
@@ -51,6 +57,8 @@ header>img{
     width: 80px;
     height: 80px;
     margin-top: 0rem;
+    border-radius: 1rem;
+    border: 2px solid rgb(32, 95, 32);
 }
 
 
