--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@ main{
     width:100%;
     height: 500px;
     clear: both;
-    background-image: url("rice-rice-seeds-agriculture-harvesting.jpg");
+    background:white;
     background-repeat: no-repeat;
     background-size: 100%;
     border-bottom: 2px solid grey ;
@@ -19,18 +19,24 @@ main{
 .model{
     width: 35%;
     border: 2px solid rgb(32, 95, 32);
-    height: 270px;
+    height: 300px;
     margin: auto;
     margin-top: 40px;
+    border-radius: 0.4rem;
 }
 input{
     margin-top: 25px;
-    border: 2px solid white;
+    border: 2px solid rgb(32, 95, 32);
     padding: 5px;
     text-align: center;
+    color: rgb(32, 95, 32);
+    border-radius: 0.4rem;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    width: 50%;
 }
 form{
-    margin-left: 27%;
+    text-align: center;
 }
 
 main>section>h1{
@@ -40,3 +46,40 @@ main>section>h1{
     margin-top: 5px;
     text-align: center;
 }
+.submitButtons{
+    background: rgb(32, 95, 32);
+    color: white;
+    width: 17%;
+}
+
+.commonSections{
+    width: 100%;
+    clear: both;
+    height: 400px;
+    background:white;
+    background-size: 100%;  
+    font-size: 2rem;
+    border-radius: 0.5rem;
+    border-bottom:1px solid gray;
+    border-top:1px solid gray;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-indent: 1.5rem;
+}
+.commonSections *{
+    color: rgb(32, 95, 32);
+    padding-left: 1rem;
+} 
+body{
+    background-image: url('bodyBackground.jpg');
+    background-size: 100%;
+    background-repeat:repeat-y ;
+    background-attachment: fixed;
+
+}
+.commonSections>p{
+    font-size: 2.5rem;
+    font-weight: lighter;
+
+}
+
