--- a/assets/newsPage/newPage.css
+++ b/assets/newsPage/newPage.css
@@ -6,7 +6,7 @@ html{
     font-size: 62.5%;
 }
 body{
-    background: rgb(247,255,236);
+    background:white;
 }
 
 header{
@@ -16,29 +16,55 @@ header{
     font-size: 2rem;
     text-align: center;
     position: fixed;
-    margin:10px;
-    height: 90px;
+    height: 70px;
+    background: white;
 }
 header>a{
+    padding: 20px;
     text-decoration: none;
     color: white;
     padding: 0.5rem;
     background:rgb(32, 95, 32);
     border-radius: 0.3rem;
 }
+
+
+
+
+
 main{
     margin-top: 90px;
     width: 100%;
+    font-size: 1.2rem;
 }
 .first-row2,.first-row1{
     width: 50%;
     height: 400px;
     float: left;
+
+}
+.first-row1{
+    clear: both;
+}
+.first-row1>img{
+    border-radius: 0.4rem;
+    height: 350px;
+}
+.top-row>img,.bottom-row>img{
+    border-radius: 0.4rem;
+    height: 150px;
+}
+.second-row{
+    clear: both ;
 }
 .top-row,.bottom-row{
     width: 50%;
     height: 200px;
-
+    overflow: hidden;
+}
+section.top-row,section.bottom-row{
+    width: 45%;
+    margin-left: 2%;
 }
 .top-row{
     float: left;
@@ -46,6 +72,55 @@ main{
 .bottom-row{
     float: left;
 }
+
+
+
+
+
+.second-row{
+    width: 100%;
+    height: 350px;
+}
+.second-row>section{
+    width: 31%;
+    height: 207px;
+    margin-top: 150px;
+    float: left;
+    margin-left: 2%;
+    overflow: hidden;
+}
+
+
+.second-row>section>img{
+    height: 150px;
+    text-align: center;
+    border-radius: 0.4rem;
+}
+img{
+    border:2px solid rgb(32, 95, 32);
+
+}
+h2{
+    clear: both;
+}
+
+
+
+.continues{
+    width:100%;
+    height: 200px;
+    margin-top: 100px;
+}
+.continues>img{
+    width:31%;
+    height: 200px;
+    margin-left: 2%;
+}
+.continues>section{
+    width: 67%;
+}
+
+
 
 
 
