--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -66,7 +66,7 @@ ul{
     width: 250px;
     position: fixed;
     left:18%;
-    border: 2px solid white;
+    border: 2px solid rgb(32, 95, 32);
     margin: auto;
     border-radius:0.5rem ;
     transform: translateY(-250px);
