--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,19 +7,19 @@ html{
 
 main{
     width:100%;
-    height: 500px;
+    height: 400px;
     clear: both;
     background:white;
     background-repeat: no-repeat;
     background-size: 100%;
     border-bottom: 2px solid grey ;
     border-top: 2px solid grey ;
-
+    border-radius:.4rem ;
 }
 .model{
     width: 35%;
     border: 2px solid rgb(32, 95, 32);
-    height: 300px;
+    height: 400px;
     margin: auto;
     margin-top: 40px;
     border-radius: 0.4rem;
@@ -62,7 +62,7 @@ main>section>h1{
     border-radius: 0.5rem;
     border-bottom:1px solid gray;
     border-top:1px solid gray;
-    margin-top: 100px;
+    margin-top: 50px;
     margin-bottom: 100px;
     text-indent: 1.5rem;
 }
@@ -72,7 +72,7 @@ main>section>h1{
 } 
 body{
     background-image: url('bodyBackground.jpg');
-    background-size: 100%;
+    background-size: cover;
     background-repeat:repeat-y ;
     background-attachment: fixed;
 
@@ -83,3 +83,26 @@ body{
 
 }
 
+@media  screen and (max-width:700px) {
+    .commonSections>h1{
+        font-size: 2rem;
+    }
+    .commonSections>p{
+        font-size: 1.5rem;
+    }
+    main>section>h1{
+        font-size: 2rem;
+    }
+    .model{
+        width: 60%;
+        height: 230px;
+        }
+        .submitButtons{
+            font-size: 1.2rem;
+            width: 26%;
+        }
+    .commonSections{
+        height: 300px;
+    }
+
+}
