--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@ html{
 
 main{
     width:100%;
-    height: 400px;
+    height: 500px;
     clear: both;
     background:white;
     background-repeat: no-repeat;
@@ -84,6 +84,9 @@ body{
 }
 
 @media  screen and (max-width:700px) {
+    main{
+        height: 400px;
+    }
     .commonSections>h1{
         font-size: 2rem;
     }
