--- a/assets/newsPage/newPage.css
+++ b/assets/newsPage/newPage.css
@@ -13,10 +13,13 @@ header{
     width: 100%;
     position: fixed;
     top: 0;
+    left:0 ;
     font-size: 2rem;
     text-align: center;
-    height: 60px;
-    background: white;
+    height: 70px;
+    background: rgba(32, 95, 32,0.9);
+    border: 1px solid rgb(32, 95, 32);
+    margin-bottom:70px ;
 }
 header>a{
     text-decoration: none;
@@ -24,9 +27,20 @@ header>a{
     top:3rem;
     color:white;
     padding-top: 0.5rem;
+    padding-left:10px ;
+    padding-right: 10px;
     background:rgb(32, 95, 32);
+    border: 2px solid white;
     border-radius: 0.3rem;
 }
+
+body>h1{
+margin-top: 80px;
+font-size: 3rem;
+color: rgb(32, 95, 32);
+text-decoration: underline;
+}
+
 .readfull,main>section>a,section>section>a{
     text-decoration: none;
     color: white;
@@ -41,7 +55,7 @@ header>a{
 
 
 main{
-    margin-top: 90px;
+    margin-top: 40px;
     width: 100%;
     font-size: 1.2rem;
 }
@@ -192,4 +206,25 @@ h2{
     .continues{
         height: auto;
     }
+}
+
+@media screen and (max-width:400px){
+    .second-row>section{
+        
+        height: 300px;
+    }
+    .first-row1{
+        height: 300px;
+    }
+    #mainsec_continue{
+        height: 300px;
+    }
+    .first-row2{
+        height: 1200px;
+    }
+    section.top-row,section.bottom-row{
+        
+        height: 300px;
+        
+       } 
 }
