--- a/assets/monitor/monitor.css
+++ b/assets/monitor/monitor.css
@@ -59,6 +59,7 @@ body>h1{
     margin:0px 20% 20px 20% ;
     border: 1px solid rgb(32, 95, 32);
     border-radius: 0.4rem;
+    float: left;
 }
 
 .public-section img{
@@ -80,5 +81,23 @@ body>h1{
     border-radius: 1rem;
 }
 
+.clearfix{
+    float: left ;
+}
 
+.person-comment>img{
+    margin-top:10px ;
+    width: 35px;
+    height: 35px;
+    margin-left:5% ;
+    margin-right: 6%;
 
+}
+
+.person-comment>section.second-piece{
+    width: 60%;
+    height: 65px;
+}
+.person-comment>*{
+    float: left;
+}
