--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/css/header.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
 
     <title>Document</title>
 </head>
 <body>
     <header>
-        <img src="assets/img/logo.webp" class="logo">
+        <img src="img/logo.webp" class="logo">
         <nav class="navbar">
-            <a href="assets/monitor/monitor.html">Monitor</a>
+            <a href="/monitor">Monitor</a>
             <a href="#">cure Instruction</a>
-            <a href="assets/newsPage/newsPage.html">News</a>
+            <a href="/newsPage">News</a>
             <a id="donate">DONATE</a>
         </nav>
         
@@ -23,9 +23,9 @@
     <input type="checkbox" id="toggle">
     <label for="toggle"  class="openmenu">Menu</label>
     <ul class="menubar">
-        <li><a href="assets/monitor/monitor.html">Monitor</a></li>
+        <li><a href="monitor">Monitor</a></li>
         <li><a href="#">Home</a></li>
-        <li><a href="assets/newsPage/newsPage.html">News</a></li>
+        <li><a href="newsPage">News</a></li>
     </ul>
 
     <section class="commonSections"> 
@@ -49,8 +49,8 @@
     </main>
     <footer>
         <h3>contact us</h3>
-        <a href="https://www.linkedin.com/in/shiva-chauhan-051275240/"><img src="assets/css/linkedinLogo.png" alt="linkedin"></a>
-        <a href="https://twitter.com/Shivachuahan17"><img src="assets/css/twitterLogo.jpeg" alt="twitter"></a>
+        <a href="https://www.linkedin.com/in/shiva-chauhan-051275240/"><img src="img/linkedinLogo.png" alt="linkedin"></a>
+        <a href="https://twitter.com/Shivachuahan17"><img src="img/twitterLogo.jpeg" alt="twitter"></a>
     </footer>
 </body>
 </html>
