successfully converted to mvc design

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <a href="/monitor">Monitor</a>
             <a href="#">cure Instruction</a>
-            <a href="/newsPage">News</a>
+            <a href="/news">News</a>
             <a id="donate">DONATE</a>
         </nav>
         
@@ -23,9 +23,9 @@
     <input type="checkbox" id="toggle">
     <label for="toggle"  class="openmenu">Menu</label>
     <ul class="menubar">
-        <li><a href="monitor">Monitor</a></li>
+        <li><a href="/monitor">Monitor</a></li>
         <li><a href="#">Home</a></li>
-        <li><a href="newsPage">News</a></li>
+        <li><a href="/news">News</a></li>
     </ul>
 
     <section class="commonSections"> 
