--- a/views/monitor.ejs
+++ b/views/monitor.ejs
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="monitor.css"> 
+    <link rel="stylesheet" type="text/css" href="css/monitor.css"> 
     <title>Document</title>
 </head>
 <body>
     <header>
-        <a href="../../index.html">HOME</a>
+        <a href="/">HOME</a>
     </header>
     <h1>Crop growth till now</h1>
-    <img class="monitor-img" alt="cropGrowthGraph" src="../img/dummy_monitor_img.png">
+    <img class="monitor-img" alt="cropGrowthGraph" src="img/dummy_monitor_img.png">
     <section class="public-section">
        <h1>comments:</h1>
         <section class="person-comment clearfix">
-            <img src="../img/dummy_person_dp.jpeg" alt="person-profile">
+            <img src="img/dummy_person_dp.jpeg" alt="person-profile">
             <section class="second-piece">
                 <h2>person name</h2>
                 <p>person comment </p>
