trying to add model

--- a/views/monitor.ejs
+++ b/views/monitor.ejs
@@ -14,13 +14,17 @@
     <img class="monitor-img" alt="cropGrowthGraph" src="img/dummy_monitor_img.png">
     <section class="public-section">
        <h1>comments:</h1>
-        <section class="person-comment clearfix">
-            <img src="img/dummy_person_dp.jpeg" alt="person-profile">
-            <section class="second-piece">
-                <h2>person name</h2>
-                <p>person comment </p>
-            </section>
-        </section>
+        <% for(let i=0;i<info.length;i++){%>
+
+            <section class="person-comment clearfix">
+                <img src="img/dummy_person_dp.jpeg" alt="person-profile">
+                <section class="second-piece">
+                    <h2><%=info[i]['']%></h2>
+                    <p><%= info[i][1]%> </p>
+                    <i class="fa fa-thumbs-up" ></i>
+                    <i class="fa fa-trash" ></i>
+                </section>
+            </section><%}%> 
     </section>
 </body>
 </html>
