--- a/views/monitor.ejs
+++ b/views/monitor.ejs
@@ -19,7 +19,7 @@
             <section class="person-comment clearfix">
                 <img src="img/dummy_person_dp.jpeg" alt="person-profile">
                 <section class="second-piece">
-                    <h2><%=info[i]['']%></h2>
+                    <h2><%= info[i].farmer_name %></h2>
                     <p><%= info[i][1]%> </p>
                     <i class="fa fa-thumbs-up" ></i>
                     <i class="fa fa-trash" ></i>
