writing auth controller

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -52,5 +52,8 @@
         <a href="https://www.linkedin.com/in/shiva-chauhan-051275240/"><img src="img/linkedinLogo.png" alt="linkedin"></a>
         <a href="https://twitter.com/Shivachuahan17"><img src="img/twitterLogo.jpeg" alt="twitter"></a>
     </footer>
+
+    <a href="/login">Login</a>
+    <a href="/signup">signup</a>
 </body>
 </html>
