--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/header.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css"> -->
 
     <title>Document</title>
 </head>
@@ -52,8 +52,9 @@
         <a href="https://www.linkedin.com/in/shiva-chauhan-051275240/"><img src="img/linkedinLogo.png" alt="linkedin"></a>
         <a href="https://twitter.com/Shivachuahan17"><img src="img/twitterLogo.jpeg" alt="twitter"></a>
     </footer>
-
-    <a href="/login">Login</a>
-    <a href="/signup">signup</a>
+    <div >
+        <a href="/login">Login</a>
+        <a href="/signup">signup</a>
+    </div>
 </body>
 </html>
