--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,6 +55,7 @@
     <div >
         <a href="/login">Login</a>
         <a href="/signup">signup</a>
+        <a href="/logout">logout</a>
     </div>
 </body>
 </html>
